--- a/notebooks/2021-03-12_Ad-Hoc.ipynb
+++ b/notebooks/2021-03-12_Ad-Hoc.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "alternate-shark",
+   "id": "blind-recruitment",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "rough-glasgow",
+   "id": "listed-centre",
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "threatened-algebra",
+   "id": "broken-trauma",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "valued-patrol",
+   "id": "urban-hearts",
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "stylish-discretion",
+   "id": "cooperative-warrant",
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "north-vermont",
+   "id": "satellite-henry",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "alternative-notion",
+   "id": "municipal-wheat",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "satisfactory-paintball",
+   "id": "expressed-german",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "unique-mechanics",
+   "id": "protective-vector",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "generous-circuit",
+   "id": "attended-burst",
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "manual-season",
+   "id": "inner-labor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "elect-coverage",
+   "id": "announced-condition",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "embedded-clearing",
+   "id": "particular-score",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "efficient-correlation",
+   "id": "retired-literacy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "lasting-handbook",
+   "id": "dutch-society",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "roman-account",
+   "id": "charming-factory",
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "entertaining-cooperative",
+   "id": "apart-shepherd",
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "rolled-headline",
+   "id": "removable-rescue",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "sustained-edward",
+   "id": "uniform-terrorism",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "novel-acoustic",
+   "id": "sound-mission",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "patient-holly",
+   "id": "ranging-honduras",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "devoted-recall",
+   "id": "wired-swing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "noticed-drove",
+   "id": "moderate-marriage",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,8 +299,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "id": "tropical-sunday",
+   "execution_count": 78,
+   "id": "enabling-dating",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "awful-giving",
+   "id": "forty-integrity",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "adjusted-thousand",
+   "id": "reflected-carry",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "narrative-suspension",
+   "id": "empirical-equality",
    "metadata": {},
    "outputs": [
     {
@@ -410,26 +410,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "id": "disturbed-clone",
+   "execution_count": 79,
+   "id": "directed-vitamin",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_, index = torch.max(out, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "painful-driver",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Object `exp` not found.\n"
-     ]
+     "data": {
+      "text/plain": [
+       "tensor([207])"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "exp?"
+    "index"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "powered-determination",
+   "id": "manufactured-softball",
    "metadata": {},
    "outputs": [],
    "source": []
